--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="odd-number">Number 1 - I'm a class!</p>
     <div id="number-two">Number 2 - I'm one ID.</div>
-    <p class="odd-number number-three">Number 3 - I'm a class, but cooler!</p>
-    <div id="number-four">Number 4 - I'm another ID.</div>
+    <p class="odd-number adjust-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="number-four" class="adjust-font-size">Number 4 - I'm another ID.</div>
     <p class="odd-number">Number 5 - I'm a class!</p>
   </body>
 </html>
